# docs/openapi3.json
@@ -305,6 +305,9 @@
           "created_by": {
             "type": "string"
           },
+          "display_name": {
+            "type": "string"
+          },
           "is_active": {
             "type": "boolean"
           },
@@ -335,6 +338,9 @@
             "type": "string"
           },
           "created_by": {
+            "type": "string"
+          },
+          "display_name": {
             "type": "string"
           },
           "id": {
